4.9
* 1704709: config checks for installed devel packages

4.8
* help text in configurator was made selectable
* pager shows desktop wallpaper
* expanding tilda (~) in action field in config files
* menu icons size was set to 24 from 22 to avoid scaling
* avoid re-moving panel to same position
* plugins section in configurator dialog suggests to edit config manually
* taskbar vertical layout was fixed
* taskbar 'icons only' mode was optimized
* fbpanel config window has nice "star" icon

4.7
New Feature
* Build application menu from *.desktop files 
* Using themed icons. Change icon theme and see fbpanel updates itself
* default config files were updates to use new functionality

4.6
New Features
* [ 1295234 ] Detect Window "Urgency".
* Raise window when drag target is over its name in taskbar
* fixing meory leaks from XGetWindowProperty.
* fix urgency code to catch up urgency of new windows 
* taskbar: correct position of task's label
* taskbar: remove extra spaces
* taskbar: do not create event box beneath task button
* taskbar: use default expose method in gtk_bar
* taskbar; use default expose method in task button
* taskbar: cleaning up dnd code
* launchbar: visual feedback on button press

4.5
Fixed bugs
* Makefile.common overwrite/ignore CFLAGS and LDFLAGS env. variables
* rebuild dependancy Makefiles (*.dep) if their prerequisits were changed
* fixing gcc-4.1 compile warnings about signess
* removing tar from make's recursive goals
* fixing NET_WM_STRUT code to work on 64 bit platforms

New features
* porting plugins/taskbar to 64 bit
* porting plugins/icons to 64 bit
* adding LDFLAGS=-Wl,-O1 to Makefile
* adding deskno2 plugin; it shows current desktop name and allow to scroll over available desktops
* applying patch [ 1062173 ] NET_ACTIVE_WINDOW support
* hiding tray when there are no tray icons
* remove extra space around tray
* using new icons from etiquette theme. droping old ones

4.4
New Feature
* 64-bit awarenes

4.3
New Feature